# yabmp

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
.github/workflows/: test.yml
doc/: CMakeLists.txt  Doxyfile.cmake.in
lib/: CMakeLists.txt
lib/yabmp/: CMakeLists.txt  versions.ldscript
lib/yabmp/inc/: yabmp.h  yabmp_types.h
lib/yabmp/inc/private/: yabmp_api.h  yabmp_checks.h  yabmp_config.h.cmake.in  yabmp_info.h  yabmp_internal.h  yabmp_malloc.h  yabmp_message.h  yabmp_rtransforms.h  yabmp_stream.h  yabmp_struct.h
lib/yabmp/src/: yabmp.c  yabmp_info.c  yabmp_malloc.c  yabmp_message.c  yabmp_reader.c  yabmp_rtransforms.c  yabmp_stream.c
tests/: CMakeLists.txt
tests/nonregression/: CMakeLists.txt
tests/nonregression/expected/: multiple.info.txt
tests/nonregression/expected/bmpsuite/b/: badbitcount.bmp.info.txt  badbitssize.bmp.info.txt  baddens1.bmp.info.txt  baddens2.bmp.info.txt  badplanes.bmp.info.txt  badrle.bmp.info.txt  badrle4ter.bmp.info.txt  badrlebis.bmp.info.txt  badwidth.bmp.info.txt  reallybig.bmp.info.txt  rgb16-880.bmp.info.txt  rletopdown.bmp.info.txt
tests/nonregression/expected/bmpsuite/g/: pal1bg.bmp.info.txt  pal1wb.bmp.info.txt  pal4.bmp.info.txt  pal4gs.bmp.info.txt  pal8-0.bmp.info.txt  pal8gs.bmp.info.txt  pal8nonsquare.bmp.info.txt  pal8os2.bmp.info.txt  pal8rle.bmp.info.txt  pal8topdown.bmp.info.txt  pal8v4.bmp.info.txt  pal8v5.bmp.info.txt  pal8w124.bmp.info.txt  pal8w125.bmp.info.txt  pal8w126.bmp.info.txt  rgb16-565.bmp.info.txt  rgb16-565pal.bmp.info.txt  rgb16-880.bmp.info.txt  rgb16.bmp.info.txt  rgb24pal.bmp.info.txt  rgb32.bmp.info.txt  rgb32bf.bmp.info.txt
tests/nonregression/expected/bmpsuite/q/: pal1p1.bmp.info.txt  pal2.bmp.info.txt  pal2color.bmp.info.txt  pal4rlecut.bmp.info.txt  pal4rletrns.bmp.info.txt  pal8offs.bmp.info.txt  pal8os2v2-40sz.bmp.info.txt  pal8rlecut.bmp.info.txt  rgb16-231.bmp.info.txt  rgb16-3103.bmp.info.txt  rgb24jpeg.bmp.info.txt  rgb24largepal.bmp.info.txt  rgb24lprof.bmp.info.txt  rgb24png.bmp.info.txt  rgb24prof.bmp.info.txt  rgb24prof2.bmp.info.txt  rgb24v4.bmp.info.txt  rgb32-111110.bmp.info.txt  rgb32-7187.bmp.info.txt  rgb32fakealpha.bmp.info.txt  rgb32h52.bmp.info.txt  rgba16-1924.bmp.info.txt  rgba16-4444.bmp.info.txt  rgba16-5551.bmp.info.txt  rgba32-1010102.bmp.info.txt  rgba32-61754.bmp.info.txt  rgba32-81284.bmp.info.txt  rgba32.bmp.info.txt  rgba32abf.bmp.info.txt
tests/nonregression/expected/fuzzer/: fuzzer-000001.bmp.info.txt  fuzzer-000002.bmp.info.txt  fuzzer-000003.bmp.info.txt  fuzzer-000006.bmp.info.txt  fuzzer-000008.bmp.info.txt  fuzzer-000010.bmp.info.txt  fuzzer-000012.bmp.info.txt  fuzzer-000013.bmp.info.txt  fuzzer-000014.bmp.info.txt  fuzzer-000015.bmp.info.txt  fuzzer-000016.bmp.info.txt  fuzzer-000017.bmp.info.txt  fuzzer-000018.bmp.info.txt  fuzzer-000019.bmp.info.txt  fuzzer-000020.bmp.info.txt  fuzzer-000022.bmp.info.txt  fuzzer-000023.bmp.info.txt  fuzzer-000024.bmp.info.txt  fuzzer-000025.bmp.info.txt  fuzzer-000026.bmp.info.txt  fuzzer-000027.bmp.info.txt  fuzzer-000028.bmp.info.txt  fuzzer-000029.bmp.info.txt  fuzzer-000031.bmp.info.txt  fuzzer-000032.bmp.info.txt  fuzzer-000033.bmp.info.txt  fuzzer-000034.bmp.info.txt  fuzzer-000035.bmp.info.txt
tests/unit/: CMakeLists.txt  yabmpmessageunit.c  yabmpunit.c
tools/: travis-coverage.sh  travis-install.sh
